--- a/config/west.yml
+++ b/config/west.yml
@@ -1,11 +1,11 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
+      url-base: https://github.com/alinelena
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: zephyr/3.1-upgrade
       import: app/west.yml
   self:
     path: config
