--- a/build.yaml
+++ b/build.yaml
@@ -14,4 +14,17 @@
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: cup
+    shield: mlego2x2_rev1
+  - board: blackpill_f401ce 
+    shield:  mlego5x13_rev4
+  - board: seeeduino_xiao_ble
+    shield: mlego5x13_rev7
+  - board: seeeduino_xiao_rp2040
+    shield: mlego2x2_rev2
+  - board: rpi_pico
+    shield: mlego5x13_rev5
+  - board: seeeduino_xiao_rp2040
+    shield: mlego5x13_rev7
+  - board: seeeduino_xiao_ble
+    shield: mlego5x13_rev8
+
