--- a/config/boards/shields/mlego2x2_rev2/cup.conf
+++ b/config/boards/shields/mlego2x2_rev2/cup.conf
@@ -1,7 +1,7 @@
 CONFIG_USB_DEVICE_MANUFACTURER="alin elena"
 CONFIG_USB_DEVICE_VID=0xBABA
 CONFIG_USB_DEVICE_PID=0x6162
-CONFIG_USB_DEVICE_PRODUCT="m4 2x2 rev2"
+CONFIG_USB_DEVICE_PRODUCT="cup"
 
 CONFIG_ZMK_USB=y
 CONFIG_ZMK_BLE=n
