--- a/config/boards/shields/cup/cup.zmk.yml
+++ b/config/boards/shields/cup/cup.zmk.yml
@@ -1,10 +1,10 @@
 file_format: "1"
 id: mlego2x2
 name: cup
-type: shield
-url: mlego.elena.space
+type: shield/
+url: https://mlego.elena.space/m4/
 requires:
-  - seeeduino_xiao_ble
+  - seeduino_xiao_ble
 exposes:
   - i2c_encoder
   - i2c_oled
