--- a/build.yaml
+++ b/build.yaml
@@ -4,8 +4,27 @@
 # control, add individual board + shield combinations to
 # the `include` property, e.g:
 #
+# board: [ "nice_nano_v2" ]
+# shield: [ "corne_left", "corne_right" ]
+# include:
+#   - board: bdn9_rev2
+#   - board: nice_nano_v2
+#     shield: reviung41
 #
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: cup
+    shield: mlego2x2_rev1
+  - board: blackpill_f401ce 
+    shield:  mlego5x13_rev4
+  - board: seeeduino_xiao_ble
+    shield: mlego5x13_rev7
+  - board: seeeduino_xiao_rp2040
+    shield: mlego2x2_rev2
+  - board: rpi_pico
+    shield: mlego5x13_rev5
+  - board: seeeduino_xiao_rp2040
+    shield: mlego5x13_rev7
+  - board: seeeduino_xiao_ble
+    shield: mlego5x13_rev8
+
