--- a/config/boards/shields/cup/mlego2x2_rev1.conf
+++ b/config/boards/shields/cup/mlego2x2_rev1.conf
@@ -1,7 +1,7 @@
 CONFIG_USB_DEVICE_MANUFACTURER="alin elena"
 CONFIG_USB_DEVICE_VID=0xBABA
 CONFIG_USB_DEVICE_PID=0x6161
-CONFIG_USB_DEVICE_PRODUCT="cup"
+CONFIG_USB_DEVICE_PRODUCT="m4 2x2 rev1"
 
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
